# split-radix-fft

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  rfft.hpp
include/: cfft.hpp  fft.hpp  internal.hpp  splitradixfft.hpp
tests/: CMakeLists.txt  cfft_backward.cpp  cfft_forward.cpp  main.cpp  rfft_backward.cpp  rfft_forward.cpp  tests.cpp  twiddles.cpp
